--- a/project01.css
+++ b/project01.css
@@ -3,7 +3,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background-color: #ffffff;
         }
         .navbar {
             display: flex;
@@ -89,3 +89,12 @@
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+        #downloadLink {
+            border: 2px solid #007bff;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: wavy;
+            display: inline-block;
+            margin-top: 20px;
+        }
+        
